--- a/src/fonts/fontello-9a214eac/css/devjobs-codes.css
+++ b/src/fonts/fontello-9a214eac/css/devjobs-codes.css
@@ -1,2 +1,4 @@
 
 .icon-path-2-(stroke):before { content: '\e800'; } /* '' */
+.icon-moon:before { content: '\e801'; } /* '' */
+.icon-sun:before { content: '\e802'; } /* '' */
