--- a/src/fonts/fontello-9a214eac/css/devjobs-ie7.css
+++ b/src/fonts/fontello-9a214eac/css/devjobs-ie7.css
@@ -11,3 +11,5 @@
 }
 
 .icon-path-2-(stroke) { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
+.icon-moon { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe801;&nbsp;'); }
+.icon-sun { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
