--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -31,6 +31,7 @@ body:has(.dark) {
 }
 body:has(.light) {
   background-color: $white;
+  background: $secondaryClr2;
 }
 
 .header {
@@ -54,6 +55,13 @@ body:has(.light) {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+
+    @include tablet {
+      padding-top: rem(42);
+    }
+    @include phone {
+      padding-top: rem(32);
+    }
   }
 
   &__theme-toggle-wrapper {
@@ -137,6 +145,10 @@ body:has(.light) {
     border-radius: rem(6);
     overflow: hidden;
     padding: rem(2) rem(16);
+
+    @include tablet {
+      padding: 0 rem(16) 0 rem(24);
+    }
     input {
       @include transition;
       border: none;
@@ -155,9 +167,6 @@ body:has(.light) {
       .filters__name {
         border-right: rem(1) solid rgba($secondaryClr2, 0.1);
       }
-    }
-    .dark & input[type="submit"] {
-      @include button;
     }
     .dark & input[type="checkbox"] {
       border: none;
@@ -202,13 +211,106 @@ body:has(.light) {
     }
     label[for="full-time"] {
       margin-right: rem(26);
+      min-width: fit-content;
     }
     &__full-time {
+      font-size: rem(16);
       margin: 0 rem(16) 0 rem(32);
     }
     &__submit {
       @include button;
       height: rem(48);
+
+      body:has(.dark) & {
+        background: $primaryClr;
+        border-right: none;
+      }
+
+      @include tablet {
+        padding: rem(16) rem(14);
+      }
+    }
+  }
+  .jobs {
+    padding: rem(105) 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: rem(30);
+    row-gap: rem(65);
+
+    @include tablet {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include phone {
+      grid-template-columns: repeat(1, 1fr);
+    }
+    .job-card {
+      body:has(.dark) & {
+        background: $primaryClr3;
+      }
+      padding: rem(0) rem(32) rem(36) rem(32);
+      background: $white;
+      border-radius: rem(6);
+      position: relative;
+      display: flex;
+      flex-direction: column;
+      &__logo-wrapper {
+        transform: translateY(-50%);
+        width: rem(50);
+        height: rem(50);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: rem(15);
+      }
+      &__logo {
+        object-fit: contain;
+      }
+      &__header {
+        display: flex;
+        gap: rem(12);
+        color: $secondaryClr4;
+      }
+      &__contract {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: rem(12);
+        &::before {
+          display: inline-block;
+          content: "";
+          width: rem(4);
+          height: rem(4);
+          border-radius: 50%;
+          background: $secondaryClr4;
+        }
+      }
+      &__postion {
+        body:has(.dark) & {
+          color: $white;
+        }
+        font-size: rem(20);
+        color: $primaryClr3;
+        font-weight: bold;
+        margin: rem(16) 0;
+      }
+      &__company {
+        color: $secondaryClr4;
+        margin-bottom: rem(40);
+      }
+      &__location {
+        color: $primaryClr;
+        font-weight: bold;
+        font-size: rem(14);
+      }
+      &__link {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        font-size: 0;
+      }
     }
   }
 }
