--- a/src/styles/_style.scss
+++ b/src/styles/_style.scss
@@ -41,16 +41,16 @@ body {
 }
 
 .header {
-  background: url("../assets/desktop/bg-pattern-header.svg") no-repeat;
+  background: url("/desktop/bg-pattern-header.svg") no-repeat;
   background-size: cover;
   border-radius: 0 0 0 rem(100);
 
   @include tablet {
-    background: url("../assets/tablet/bg-pattern-header.svg") no-repeat;
+    background: url("/tablet/bg-pattern-header.svg") no-repeat;
     background-size: cover;
   }
   @include phone {
-    background: url("../assets/mobile/bg-pattern-header.svg") no-repeat;
+    background: url("/mobile/bg-pattern-header.svg") no-repeat;
     background-size: cover;
   }
 
